# rp-project

./: .gitignore  README.md  package-lock.json
backend/: .env.example  README.md  requirements.txt  test_extract.py
backend/app/: main.py  schemas.py
backend/app/modules/ayathma/: KPI_IMPROVEMENT_GUIDE.md  README.md  __init__.py  requirements.txt  router.py  train_kpi_model.sh
backend/app/modules/nandika/: README.md  __init__.py  classifier.py  main.py  router.py  scraper.py
backend/app/modules/vinushan/: README.md  __init__.py  router.py
backend/app/modules/vishva/: README.md  __init__.py  _run_extract.py  main_agent.py  predict_categories.py  requirements.txt  router.py  train_model.py
documentation/: viva_demo_guide.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: docs.html
frontend/src/: index.css
frontend/src/components/: ChatBox.jsx  Layout.jsx
frontend/src/lib/: api.js
shared/: README.md
vinushan /backend/: README.md  pyproject.toml  report.md
vinushan /backend/data cleaning/: data_cleaning.ipynb
vinushan /backend/src/contextawareforecastingsys/: crew.py  dynamic_crew.py  main.py  router.py
vinushan /backend/src/contextawareforecastingsys/api/: models.py
vinushan /backend/src/contextawareforecastingsys/config/: tasks.yaml
vinushan /backend/src/contextawareforecastingsys/tools/: data_loader.py  sales_tools.py
vinushan /backend/src/reports/: monthly_plan.md
vinushan /frontend/: index.html  package-lock.json  package.json
vinushan /frontend/src/: App.css  App.tsx
(+251 files in other folders)
