[project]
name = "contextawareforecastingsys"
version = "0.1.0"
description = "ContextAwareForecastingSys using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]==1.5.0",
    "langchain-groq>=1.0.1",
    "litellm>=1.80.5",
    "pandas>=2.1",
    "numpy>=1.24",
    "langchain-openai>=0.2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
contextawareforecastingsys = "contextawareforecastingsys.main:run"
run_crew = "contextawareforecastingsys.main:run"
run_full = "contextawareforecastingsys.main:run_full"
train = "contextawareforecastingsys.main:train"
replay = "contextawareforecastingsys.main:replay"
test = "contextawareforecastingsys.main:test"
run_with_trigger = "contextawareforecastingsys.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
